<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/grid"
        android:textSize="70sp"
        />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:useDefaultMargins="false"
        android:columnCount="4"
        android:rowCount="4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
       >

        <Button
            android:id="@+id/imgButton00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imgButton01"
            app:layout_constraintBottom_toTopOf="@id/imgButton10"
            style="@style/Buttons"
            android:onClick="onGameClick"
            />
        <Button
            android:id="@+id/imgButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgButton00"
            app:layout_constraintRight_toLeftOf="@id/imgButton02"
            app:layout_constraintBottom_toTopOf="@id/imgButton11"
            android:text="01"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton02"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgButton01"
            app:layout_constraintRight_toLeftOf="@id/imgButton03"
            app:layout_constraintBottom_toTopOf="@id/imgButton12"
            android:text="02"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imgButton02"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imgButton13"
            android:text="03"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton00"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imgButton11"
            app:layout_constraintBottom_toTopOf="@id/imgButton20"
            android:text="10"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton01"
            app:layout_constraintLeft_toRightOf="@id/imgButton10"
            app:layout_constraintRight_toLeftOf="@id/imgButton12"
            app:layout_constraintBottom_toTopOf="@id/imgButton21"
            android:text="11"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton02"
            app:layout_constraintLeft_toRightOf="@id/imgButton11"
            app:layout_constraintRight_toLeftOf="@id/imgButton13"
            app:layout_constraintBottom_toTopOf="@id/imgButton22"
            android:text="12"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton03"
            app:layout_constraintLeft_toRightOf="@id/imgButton12"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imgButton23"
            android:text="13"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imgButton21"
            app:layout_constraintBottom_toTopOf="@id/imgButton30"
            android:text="20"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton11"
            app:layout_constraintLeft_toRightOf="@id/imgButton20"
            app:layout_constraintRight_toLeftOf="@id/imgButton22"
            app:layout_constraintBottom_toTopOf="@id/imgButton31"
            android:text="21"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton12"
            app:layout_constraintLeft_toRightOf="@id/imgButton21"
            app:layout_constraintRight_toLeftOf="@id/imgButton23"
            app:layout_constraintBottom_toTopOf="@id/imgButton32"
            android:text="22"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton13"
            app:layout_constraintLeft_toRightOf="@id/imgButton22"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/imgButton33"
            android:text="23"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/imgButton31"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="30"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgButton21"
            app:layout_constraintLeft_toRightOf="@id/imgButton30"
            app:layout_constraintRight_toLeftOf="@id/imgButton32"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="31"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton32"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_constraintTop_toBottomOf="@id/imgButton22"
            app:layout_constraintLeft_toRightOf="@id/imgButton31"
            app:layout_constraintRight_toLeftOf="@id/imgButton33"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="32"
            style="@style/Buttons"/>
        <Button
            android:id="@+id/imgButton33"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:layout_constraintTop_toBottomOf="@id/imgButton23"
            app:layout_constraintLeft_toRightOf="@id/imgButton32"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="33"
            style="@style/Buttons"/>
    </GridLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Check Game"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid"
        app:layout_constraintBottom_toTopOf="@id/startButtonMain"
        />

    <Button
        android:id="@+id/startButtonMain"
        android:text="@string/startMenu"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="onHomeClick"/>

        <Button
            android:id="@+id/optionsButton"
            android:text="@string/optionsButton"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/startButtonMain"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="onOptionsClick"/>


</androidx.constraintlayout.widget.ConstraintLayout>